--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.gianvittorio.insurance-wallet</groupId>
 	<artifactId>api-gateway</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${global.version}</version>
 	<name>api-gateway</name>
 	<description>API Gateway</description>
 
